# MultiOS-

./: ADMIN_SHELL_COMPLETION_REPORT.md  ADMIN_SHELL_IMPLEMENTATION.md  ADVANCED_DRIVER_FRAMEWORK_COMPLETION_REPORT.md  ADVANCED_PERIPHERAL_DRIVERS_IMPLEMENTATION.md  ARM64_MOBILE_TABLET_SUPPORT_IMPLEMENTATION.md  AUTOMATED_UPDATE_SCHEDULING_COMPLETION_REPORT.md  CLI_SHELL_FINAL_REPORT.md  CLI_SHELL_IMPLEMENTATION.md  COMPREHENSIVE_TESTING_SUITE_COMPLETION_REPORT.md  CONTRIBUTING.md  CPU_ARCHITECTURE_IMPLEMENTATION.md  Cargo.toml  DELTA_REPOSITORY_IMPLEMENTATION_REPORT.md  DEPLOYMENT_GUIDE.md  DESKTOP_PC_IMPLEMENTATION_COMPLETE.md  DOCUMENTATION_VERIFICATION_CHECKLIST.md  ESSENTIAL_SYSTEM_SERVICES_IMPLEMENTATION.md  FILE_OPERATIONS_IMPLEMENTATION.md  FILE_SYSTEM_TESTING_COMPLETION_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_PROJECT_SUMMARY.md  GRAPHICS_DRIVER_COMPLETION_REPORT.md  GRAPHICS_DRIVER_FRAMEBUFFER_IMPLEMENTATION.md  HAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_INTERRUPTS_SYSCALLS.md  IMPLEMENTATION_SUMMARY_UPDATE_TESTS.md  INTERRUPT_HANDLING_IMPLEMENTATION.md  INTER_PROCESS_COMMUNICATION_IMPLEMENTATION.md  IPC_IMPLEMENTATION_COMPLETE.md  MFS_IMPLEMENTATION_SUMMARY.md  MULTICORE_OPTIMIZATION_IMPLEMENTATION.md  MULTIOS_ADMIN_SECURITY_UPDATE_COMPLETION_REPORT.md  MULTIOS_FILE_OPERATIONS_COMPLETE.md  MULTIOS_GUI_TOOLKIT_IMPLEMENTATION.md  MULTIOS_OPERATIONAL_DEPLOYMENT_FINAL_REPORT.md  MULTIOS_OPERATIONAL_DEPLOYMENT_FINAL_SUMMARY.md  MULTIOS_RELEASE_COMPLETION_SUMMARY.md  PERFORMANCE_TESTING_IMPLEMENTATION_COMPLETE.md  (+40 more)
academic/cpu_testing/: Cargo.toml  IMPLEMENTATION_COMPLETE.md  README.md
academic/cpu_testing/configs/: default.toml
academic/cpu_testing/docs/: ARCHITECTURE.md
academic/cpu_testing/scripts/: run_examples.sh
academic/cpu_testing/src/: architecture.rs  comparison.rs  configuration.rs  isa_testing.rs  main.rs  memory_hierarchy.rs  performance.rs  pipeline_analysis.rs  simulator.rs  utils.rs
bootloader_testing/: Cargo.toml
bootloader_testing/configs/: global_test_config.toml
bootloader_testing/docs/: README.md  TESTING_FRAMEWORK_SUMMARY.md  TEST_PROCEDURES.md
bootloader_testing/integration/: Cargo.toml
bootloader_testing/integration/src/: qemu_boot_integration_tests.rs
bootloader_testing/logging/src/: lib.rs
bootloader_testing/unit/: Cargo.toml
bootloader_testing/unit/src/: bootloader_core_tests.rs
bootloader_testing/validation/: Cargo.toml
bootloader_testing/validation/src/: main.rs
comprehensive_testing_suite/: .gitlab-ci.yml  Cargo.toml  FILE_STRUCTURE_SUMMARY.md  README.md
comprehensive_testing_suite/.github/workflows/: ci-cd.yml
comprehensive_testing_suite/scripts/: install_deps.sh  setup_dev_env.sh
comprehensive_testing_suite/src/: lib.rs
cross_platform_compat_layer/: Cargo.toml  IMPLEMENTATION_REPORT.md  PROJECT_SUMMARY.md  README.md  build.sh
cross_platform_compat_layer/src/: examples.rs  lib.rs
cross_platform_compat_layer/src/api/: mod.rs
cross_platform_compat_layer/src/arch/: mod.rs
cross_platform_compat_layer/src/devices/: mod.rs
cross_platform_compat_layer/src/drivers/: mod.rs
cross_platform_compat_layer/src/framework/: mod.rs
cross_platform_compat_layer/src/platform/: mod.rs
cross_platform_compat_layer/src/testing/: mod.rs
deployment/package_manager/src/: Cargo.toml
distribution/bootloader/: Cargo.toml
distribution/bootloader/configs/: multi_stage_boot_configs.md
distribution/bootloader/src/: boot_menu.rs  device_detection.rs  legacy.rs  lib.rs  memory_init_example.rs  uefi.rs
distribution/libraries/filesystem/: Cargo.toml  MFS_IMPLEMENTATION.md  README_MFS.md  VFS_IMPLEMENTATION.md
distribution/multios/: Cargo.toml  Jenkinsfile  README.md
distribution/multios/bootloader/: Cargo.toml
distribution/multios/kernel/: Cargo.toml
distribution/multios/scripts/: build.bat  build.sh
distribution/resources/boot/: COMPLETION_SUMMARY.md  Cargo.toml
hardware_support/networking/: CONFIGURATION.md  Cargo.toml
hardware_support/networking/examples/: wifi_scan.rs
hardware_support/networking/src/: config.rs  hotplug.rs  lib.rs  protocols.rs  scanning.rs  security.rs  wifi.rs
kernel/: BOOTSTRAP_DOCUMENTATION.md  Cargo.toml
kernel/docs/: ENCRYPTION_UTILITIES.md  PROCESS_SERVICE_MANAGEMENT.md  PROCESS_SERVICE_MANAGEMENT_IMPLEMENTATION_SUMMARY.md
kernel/src/: lib.rs  service_manager.rs
kernel/src/admin/: IMPLEMENTATION_CHECKLIST.md  admin_api.rs  admin_shell_tests.rs  audit.rs  config_manager.rs  config_tests.rs  openapi.yaml  resource_monitor.rs  security.rs  user_manager.rs
kernel/src/bootstrap/: arch_bootstrap.rs  early_init.rs  error_handling.rs  panic_handler.rs
kernel/src/drivers/: block.rs  block_io_scheduler.rs  framebuffer.rs  graphics.rs  graphics_utils.rs  (+1 more)
libraries/device-drivers/: ADVANCED_DRIVER_FRAMEWORK_ENHANCEMENT.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md
libraries/ipc/: Cargo.toml  README.md
libraries/memory-manager/: Cargo.toml
libraries/scheduler/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  TECHNICAL_SPECIFICATION.md
perf/benchmarking/: Cargo.toml  IMPLEMENTATION_REPORT.md  README.md  demo.sh
perf/scheduler_profiler/: Cargo.toml
real_world/edge_computing/: Cargo.toml  IMPLEMENTATION_SUMMARY.md
system_features/containers/: Cargo.toml  README.md
system_features/distributed/: Cargo.toml  README.md
system_features/hypervisor/: Cargo.toml  HYPERVISOR_COMPLETION_REPORT.md
system_features/networking/: Cargo.toml  README.md
testing/regression/: Cargo.toml  test_compilation.sh
ui_testing_framework/: Cargo.toml  INTEGRATION_GUIDE.md  README.md
ui_testing_framework/examples/: accessibility_testing.rs  basic_automation.rs  comprehensive_test_suite.rs  performance_benchmark.rs  screenshot_comparison.rs  visual_regression.rs
ui_testing_framework/src/: accessibility.rs  automation.rs  benchmarking.rs  comparison.rs  debugging.rs  lib.rs  performance.rs  platform.rs  regression.rs  validation.rs  widgets.rs
ui_testing_framework/test_data/: test_config.toml  test_scenarios.toml
(+1516 files in other folders)
