[package]
name = "multios-cross-platform-compat"
version = "1.0.0"
edition = "2021"
description = "Cross-platform compatibility layer for MultiOS"
license = "MIT"
authors = ["MultiOS Team"]

[dependencies]
# Core dependencies
log = "0.4"
spin = "0.9"
bitflags = "2.4"
uart-queue = "0.1"

# Architecture-specific dependencies
[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14"
pc-keymap = "0.7"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64 = "0.1"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.8"

# Serialization for configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Device interfaces
device-types = "0.1"
embedded-hal = "1.0"
# 128-bit integer support for memory addressing
num-bigint = { version = "0.4", features = ["serde"] }

[build-dependencies]
cc = "1.0"

[features]
# Architecture support
x86_64 = []
aarch64 = []
riscv64 = []

# Device support
pci = []
usb = []
graphics = []
network = []
audio = []

# Testing and debugging
test = []
debug = []

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"