[package]
name = "multios-ui-testing-framework"
version = "1.0.0"
edition = "2021"
description = "Comprehensive UI Testing and Validation Framework for MultiOS"
license = "MIT"
repository = "https://github.com/multios/ui-testing-framework"
keywords = ["ui", "testing", "gui", "accessibility", "validation", "multios"]
authors = ["MultiOS Team"]

[dependencies]
# Core testing dependencies
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Image processing for screenshot comparison
image = "0.25"
imageproc = "0.23"

# Web automation for GUI testing
scrap = "1.6"
reqwest = { version = "0.11", features = ["json"] }

# Performance benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Testing framework
tempfile = "3.8"
assert_matches = "1.5"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Accessibility testing
axle-tree = "0.4"

# HTTP client for cross-platform testing
hyper = { version = "1.0", features = ["full"] }
hyper-tls = "0.5"

# Parallel execution
rayon = "1.8"

# Data structures
indexmap = { version = "2.1", features = ["serde"] }
parking_lot = "0.12"

# UI automation
atty = "0.2"
termion = "1.5"
similar = "2.4"

[dev-dependencies]
proptest = "1.4"
mockall = "0.12"

[features]
default = ["visual-comparison", "accessibility", "performance"]
visual-comparison = ["image/imageproc"]
accessibility = ["axle-tree"]
performance = ["criterion"]
cross-platform = ["hyper", "hyper-tls"]

[[bin]]
name = "ui-test-runner"
path = "src/main.rs"

[profile.release]
debug = true