[package]
name = "cpu_architecture_testing"
version = "1.0.0"
edition = "2021"
description = "MultiOS CPU Architecture Testing Framework for Multi-Architecture Research"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

# Architecture simulation
bincode = "1.3"
bitflags = "2.0"

# Performance analysis
criterion = "0.5"
rayon = "1.8"

# Analysis and visualization
plotters = "0.3"
regex = "1.10"

# Testing and validation
proptest = "1.4"

# System integration
nix = "0.27"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "cpu_testing"
path = "src/main.rs"

[features]
default = ["all_arches"]
all_arches = ["x86_64", "arm64", "riscv64", "sparc64", "powerpc64"]
x86_64 = []
arm64 = []
riscv64 = []
sparc64 = []
powerpc64 = []

[profile.release]
opt-level = 3
lto = true