[package]
name = "multios-scheduler"
version = "0.1.0"
edition = "2021"
description = "MultiOS Process and Thread Scheduler"
license = "MIT OR Apache-2.0"
authors = ["MultiOS Team"]

[dependencies]
# Core scheduling
spin = "0.9"
bitflags = "2.4"
log = "0.4"

# Thread management
# No additional dependencies needed for basic scheduling

# Testing
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
fakeit = "1.3"

[features]
default = []
real_time = []
multi_core = []

[profile.dev]
opt-level = 1
debug = true
lto = false
codegen-units = 1
panic = "abort"

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"