[package]
name = "multios-benchmarking"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
libc = "0.2"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
console = "0.15"

# CPU and system info
sysinfo = "0.29"
tachyonix = "0.1"

# Memory and allocation
crossbeam-channel = "0.5"

# File system
walkdir = "2.3"

# Networking
mio = "0.8"
socket2 = "0.4"

# Math operations
num-traits = "0.2"
ordered-float = "3.0"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "multios-benchmark"
path = "src/main.rs"

[features]
default = []
network = ["mio"]
advanced-metrics = ["tachyonix"]