[package]
name = "scheduler_profiler"
version = "0.1.0"
edition = "2021"
description = "Comprehensive scheduler performance profiling and optimization system for MultiOS"
authors = ["MultiOS Team"]
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.7"
crossbeam = "0.8"

# Async and concurrency
async-trait = "0.1"
futures = "0.3"
anyhow = "1.0"

# Performance monitoring
perf-event = "0.4"
sysinfo = "0.29"
psutil = "3.0"

# Data structures and algorithms
fixed-macro = "1.2"
rand = "0.8"
statrs = "0.16"
num-traits = "0.2"
num_cpus = "1.16"

# Web interface (for dashboard)
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
tower-service = "0.3"
http = "0.2"
mime = "0.4"

# Chart generation
plotters = "0.3"

# Configuration and CLI
clap = { version = "4.0", features = ["derive"] }
config = "0.13"

# Testing
[dev-dependencies]
mockall = "0.11"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "scheduler_profiler"
path = "src/main.rs"

[[bin]]
name = "scalability_test"
path = "src/bin/scalability_test.rs"

[[bin]]
name = "interactive_tuner"
path = "src/bin/interactive_tuner.rs"

[[bin]]
name = "performance_analyzer"
path = "src/bin/performance_analyzer.rs"

[[bin]]
name = "dashboard_server"
path = "src/bin/dashboard_server.rs"

[features]
default = ["dashboard"]
dashboard = []
performance_counters = []
hardware_monitoring = []

[package.metadata.docs.rs]
all-features = true