[package]
name = "multios-networking"
version = "1.0.0"
edition = "2021"
authors = ["MultiOS Team"]
description = "Complete TCP/IP network stack with socket programming for MultiOS"
repository = "https://github.com/multios/networking"
license = "MIT"
keywords = ["networking", "tcp", "ip", "socket", "education"]
categories = ["network-programming", "os-development"]

[dependencies]
# Core networking
bitflags = "2.4"
bytes = "1.5"
log = "0.4"
parking_lot = "0.12"
tokio = { version = "1.34", features = ["full"] }
mio = "0.8"
socket2 = "0.5"

# Memory management
alloc-decenter = "1.0"
spin = "0.9"

# Cryptography for security
ring = "0.17"
rust-crypto = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "7.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
async-trait = "0.1"
futures = "0.3"

# Testing
proptest = "1.4"
criterion = "0.5"

# Educational features
rand = "0.8"
pest = "2.7"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[[example]]
name = "basic_tcp_client"
path = "examples/basic_tcp_client.rs"

[[example]]
name = "basic_tcp_server"
path = "examples/basic_tcp_server.rs"

[[example]]
name = "udp_broadcast"
path = "examples/udp_broadcast.rs"

[[example]]
name = "ping_implementation"
path = "examples/ping_implementation.rs"

[[example]]
name = "http_client"
path = "examples/http_client.rs"

[[example]]
name = "dns_resolver"
path = "examples/dns_resolver.rs"

[[example]]
name = "network_analyzer"
path = "examples/network_analyzer.rs"

[[example]]
name = "firewall_demo"
path = "examples/firewall_demo.rs"

[[example]]
name = "routing_demo"
path = "examples/routing_demo.rs"

[[example]]
name = "socket_programming_tutorial"
path = "examples/socket_programming_tutorial.rs"

[features]
default = ["posix-compat", "education-mode"]
posix-compat = ["socket2"]
education-mode = []
simulation = []
security = []
debugging = []

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1