[package]
name = "multios-filesystem"
version = "0.1.0"
edition = "2021"
description = "MultiOS File System Framework"
license = "MIT OR Apache-2.0"
authors = ["MultiOS Team"]

[dependencies]
# Core filesystem
spin = "0.9"
bitflags = "2.4"
log = "0.4"

# Hash for integrity
# CRC32 or similar

# Testing
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[features]
default = ["fat32", "ext2", "mfs"]
fat32 = []
ext2 = []
tmpfs = []
procfs = []
devfs = []
mfs = []

[profile.dev]
opt-level = 1
debug = true
lto = false
codegen-units = 1
panic = "abort"

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"